			gene short name, expression estimates and per-comparison fold-change, p-value, q-value, and significance values (yes/no). A convenient 'data-dump' function to merge across several tables. 
		- Added coercion methods for CuffGene objects to create GRanges and GRangeslist objects (more BioC friendly!). Will work on making this possible on CuffFeatureSet and CuffFeature objects as well.
	
	Notes:
		- Removed generic for 'featureNames'.  Now appropriately uses featureNames generic from Biobase.  As a consequence, Biobase is now a dependency.
		- Added passthrough to as.dist(...) in JSdist(...)
		- Added 'logMode' argument to csClusterPlot.
		- Added 'showPoints' argument to PCAplot to allow disabling of gene values in PCA plot. If false, only sample projections are plotted.
		- Added 'facet' argument to expressionPlot to disable faceting by feature_id.
		
v1.99.6
	Notes:
		- 'annotation' and "annotation<-" generics were moved to BiocGenerics 0.3.2. Now using appropriate generic function, but requiring BiocGenerics >= 0.3.2

v1.99.5
	Bugfixes:
		- Added replicates argument to csDistHeat to view distances between individual replicate samples.
		- Appropriately distinguish now between 'annotation' (external attributes) and features (gene-level sub-features).
		- csHeatmap now has 'method' argument to pass function for any dissimilarity metric you desire. You must pass a function that returns a 'dist' object applied to rows of a matrix. Default is still JS-distance.
		
v1.99.3
	New Features:
		- Added diffTable() method to return a table of differential results broken out by pairwise comparison. (more human-readable)
		- Added sigMatrix() method to CuffSet objects to draw heatmap showing number of significant genes by pairwise comparison at a given FDR.
		- A call to fpkm() now emits calculated (model-derived) standard deviation field as well.
		- Can now pass a GTF file as argument to readCufflinks() to integrate transcript model information into database backend